--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<link rel="icon" type="" href="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Helvete</title>
-	<link rel="stylesheet" href="/index.css" />
+	<link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
 	<nav>
-		<img src="/image.png">
+		<img src="./image.png">
 		<a href="#">Home</a>
 		<a href="#about">About</a>
 		<a href="#contact">Contact</a>
